! remove sun.net.util.IPAddressUtil dependency, simplify JDK 17 usage
no need `--add-opens java.base/sun.net.util=ALL-UNNAMED`